[tool.poetry]
name = "mrgolubeff_website"
version = "0.0.1"
description = "My personal website"
authors = ["Vladimir Golubev <mrgolubeff@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
